<resources>
    <string name="app_name">Plantorium</string>
    <string name="crops">Crops</string>
    <string name="home" translatable="false">Home</string>
    <string name="map">Map</string>
    <string name="weather">Weather</string>
    <string name="task">Tasks</string>
    <string name="qr" translatable="false">QR</string>
    <string name="add_task">Add task</string>
    <string name="cancel">Cancel</string>
    <string name="date_title">Date of task:</string>
    <string name="subcategory_title">Select category:</string>
    <string name="crop_title">Select task type:</string>
    <string name="subcategory_default_message">Select category</string>
    <string name="crop_default_message">Select task type</string>
    <string name="date_default">Pick a date</string>
    <string name="formato_fecha" translatable="false">dd/mm/yyyy</string>
    <string name="formato_hora" translatable="false">hh:mm</string>
    <string name="todayButton">Today</string>
    <string name="tomorrowButton">Tomorrow</string>
    <string name="title_max_moisture" translatable="false">Max</string>
    <string name="title_min_moisture" translatable="false">Min</string>
    <string name="header_time">Time Slot</string>
    <string name="header_dir">Direction</string>
    <string name="header_speed">Speed (km/h)</string>
    <string name="slot1" translatable="false">00-06</string>
    <string name="slot2" translatable="false">06-12</string>
    <string name="slot3" translatable="false">12-18</string>
    <string name="slot4" translatable="false">18-24</string>
    <string name="title_prob_rain">Prob. of rain</string>
    <string name="title_moisture">Percentage of humidity</string>
    <string name="today_tab">TODAY</string>
    <string name="tomorrow_tab">TOMORROW</string>
    <string name="scan" translatable="false">SCAN QR</string>
    <string name="scan_des">Scan a QR code using your phone camera</string>
    <string name="scanError">This QR code does not appear in your database</string>
    <string name="qrButton">Save QR image</string>
    <string name="qrTitle">QR image successfully saved</string>
    <string name="mapError">No locations are available</string>

    <string name="date_format" translatable="false">dd/mm/yyyy</string>
    <string name="hour_format" translatable="false">hh:mm</string>

    <string name="cropName">Type of crop:</string>
    <string name="cropLocation">Location of the crop:</string>
    <string name="addCrop">Add Crop</string>
    <string name="cropRequirements">This category requires:</string>
    <string name="checkBoxWater">Water</string>
    <string name="checkBoxHarvest">Harvest</string>
    <string name="checkBoxPrune">Prune</string>
    <string name="checkBoxIll">Fumigate</string>
    <string name = "cropNumber">Number of trees in this crop:</string>
    <string name = "addCropPhoto">Select or Capture Image:</string>
    <string name = "addCropCoordinates">Select exact location on a map</string>

    <string name="categoryDeleteConfirmation">Are you sure that you want to delete this crop?</string>
    <string name="taskDeleteConfirmation">Are you sure that you want to delete this task?</string>
    <string name="categoryDeleteAccept">Accept</string>
    <string name="categoryDeleteDenied">Cancel</string>
    <string name = "nameTitle">Type of crop:</string>
    <string name = "pruneTitle">Requires prune:</string>
    <string name = "waterTitle">Requires water:</string>
    <string name = "illTitle">Requires treatment:</string>
    <string name = "harvestTitle">Requires harvest:</string>
    <string name = "cropsTitle">Number of tree in the crop:</string>
    <string name = "locationTitle">Location of the crop:</string>
    <string name = "numberTitle">Number of trees:</string>

    <string name = "riesgoRacha">Tomorrow winds of 50 km/h will be overcome</string>
    <string name = "riesgoAltaProb">Tomorrow there is a high probability of rain</string>
    <string name = "riesgoHelada">Tomorrow there is a risk of frost, the minimum temperature is less than 3º</string>
    <string name = "riesgoCalido">Tomorrow there is a risk of very hot and dry weather</string>

    <string name = "titleDialogNoMunicipios">You don\'t have any crop</string>
    <string name = "dialogNoMunicipios">No locations are available on which to report the weather</string>
    <string name = "titleDialogNoFound">There was a problem</string>
    <string name = "dialogNoFound">The location could not be found</string>

    <string name="WATER">WATER</string>
    <string name="HARVEST">HARVEST</string>
    <string name="ILL">FUMIGATE</string>
    <string name="PRUNE">PRUNE</string>
    <string name="EXCESS">EXCESS</string>
    <string name="LACK">LACK</string>
    <string name="HERBICIDE">HERBICIDE</string>

    <string name="infoTextTask">Additional info</string>
    <string name="asociatedTasks">Asociated Tasks</string>

    <string name="pickDate">You have to pick a date</string>
    <string name="typeNotValid">The task type selected is not valid for the chosen category</string>

    <string name="noTasks">No asociated tasks</string>
    <string name="yes">Yes</string>

    <string name="requiresTitle">Requires:</string>

    <string name="checkExcess">Excess of fruit</string>
    <string name="checkLack">Lack</string>
    <string name="checkHerbicide">Herbicide</string>
    <string name="Excess">EXCESS</string>
    <string name="Lack">LACK</string>
    <string name="Herbicide">HERBICIDE</string>

</resources>
